change the return code for creation
